--- a/src/frontend/frontpage.html
+++ b/src/frontend/frontpage.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Timetracker</title>
+
+    <!-- CSS, less -->
+    <link rel="stylesheet" href="/frontend/lib/bootstrap/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet/less" type="text/css" href="/frontend/css/main.less" />
+
+    <!-- Bootstrap, Popper.js, less and jQuery -->
+    <script src="/frontend/lib/jquery/jquery-3.5.1.min.js"></script>
+    <script src="/frontend/lib/bootstrap/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="/frontend/lib/bootstrap/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="/frontend/lib/less/less.js/dist/less.min.js" type="text/javascript"></script>
+
 </head>
 <body>
 <header>
@@ -10,13 +21,13 @@
     <ul>
         <li id="login-link"><a href="#" onclick="loadLogin()">Login</a></li>
         <li id="logout-link" class="d-none"><a href="#" onclick="logout()">Logout</a></li>
-        <li id="track-list--link"  class="d-none"><a href="#" onclick="loadTracking()">Tracking Liste</a></li>
-        <li id="statistic-link" class="d-none"><a href="#" onclick="loadStatistic()">Statistiken</a></li>
+        <li id="balance-link"><a href="#" onclick="loadBalance()">Bilanz</a></li>
     </ul>
 </header>
+
 <div class="wrapper"></div>
 <footer></footer>
 
-<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="/frontend/js/main.js"></script>
 </body>
 </html>
