--- a/src/frontend/frontpage.html
+++ b/src/frontend/frontpage.html
@@ -25,7 +25,9 @@
     </ul>
 </header>
 
-<div class="wrapper"></div>
+<div class="wrapper">
+    <div class="container"></div>
+</div>
 <footer></footer>
 
 <script type="text/javascript" src="/frontend/js/main.js"></script>
