--- a/src/frontend/frontpage.html
+++ b/src/frontend/frontpage.html
@@ -19,9 +19,11 @@
 <header>
     <h1>Timetracking</h1>
     <ul>
+        <li id="user-field" class="d-none">{User}</li>
         <li id="login-link"><a href="#" onclick="loadLogin()">Login</a></li>
         <li id="logout-link" class="d-none"><a href="#" onclick="logout()">Logout</a></li>
         <li id="balance-link"><a href="#" onclick="loadBalance()">Bilanz</a></li>
+        <li id="register-link" class="d-none"><a href="#" onclick="loadRegister()">User anlegen</a></li>
     </ul>
 </header>
 
