--- a/src/frontend/frontpage.html
+++ b/src/frontend/frontpage.html
@@ -20,6 +20,7 @@
     <h1>Timetracking</h1>
     <ul>
         <li id="user-field" class="d-none">{User}</li>
+        <li id="default-link" class="default-linking"><a href="login" onclick="loadLogin()">Login</a></li>
         <li id="login-link"><a href="login" onclick="loadLogin()">Login</a></li>
         <li id="logout-link" class="d-none"><a href="logout" onclick="logout()">Logout</a></li>
         <li id="balance-link"><a href="balance" onclick="loadBalance()">Bilanz</a></li>
