--- a/src/frontend/frontpage.html
+++ b/src/frontend/frontpage.html
@@ -38,5 +38,10 @@
 </footer>
 
 <script type="text/javascript" src="js/main.js"></script>
+
+<script type="text/javascript" src="js/Classes/Element.js"></script>
+<script type="text/javascript" src="js/Classes/Calendar.js"></script>
+<script type="text/javascript" src="js/Classes/date.js"></script>
+<script type="text/javascript" src="js/Classes/Track.js"></script>
 </body>
 </html>
